# MineSweeper-Solver

./: .gitignore  CMakeLists.txt  Makefile  README.md  bigFile.c  board.c  board.h  board_tools.c  board_tools.h  group.c  group.h  group_list.c  group_list.h  main.c  ms-solver  solver.c  solver.h  ui.c  ui.h
